name:                bitfunctor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://bitfunctor.net,
                     https://github.com/BitFunctor/bitfunctor
bug-reports:         https://github.com/BitFunctor/bitfunctor/issues
-- license:
-- license-file:        LICENSE
author:              andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
maintainer:          andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
copyright:           (c) 2015 BitFunctor Project
category:            Finance, Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.BitFunctor.Account,
                       Network.BitFunctor.Block,
                       Network.BitFunctor.Block.Types,
                       Network.BitFunctor.Common,
                       Network.BitFunctor.Crypto.Hash,
                       Network.BitFunctor.Crypto.Hash.Types,
                       Network.BitFunctor.Crypto.Types,
                       Network.BitFunctor.Identifiable,
                       Network.BitFunctor.State.GlobalLedger,
                       Network.BitFunctor.State.Ledger,
                       Network.BitFunctor.Theory.Complexity,
                       Network.BitFunctor.Theory.Types,
                       Network.BitFunctor.Theory.Coq.Constants,
                       Network.BitFunctor.Theory.Coq.GlobFileParser,
                       Network.BitFunctor.Theory.Coq.StatementExtraction,
                       Network.BitFunctor.Token,
                       Network.BitFunctor.Transaction,
                       Network.BitFunctor.Transaction.Types
  build-depends:       base,
                       bytestring,
                       base16-bytestring,
                       aeson,
                       containers,
                       text,
                       time,
                       cryptonite,
                       memory,
                       binary,
                       directory,
                       MissingH,
                       parsec,
                       parsec-numbers,
                       process,
                       split,
                       utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:         Network.BitFunctor.Account.Arbitrary
                       , Network.BitFunctor.Account.Tests
                       , Network.BitFunctor.Crypto.Arbitrary
                       , Network.BitFunctor.Transaction.Arbitrary
                       , Network.BitFunctor.Transaction.Tests
                       , Network.BitFunctor.Tests
  ghc-options:         -Wall -rtsopts
  build-depends:         base
                       , bitfunctor
                       , cryptonite
                       , memory
                       , binary
                       , HUnit
                       , QuickCheck
                       , quickcheck-instances
                       , tasty
                       , tasty-hunit
                       , tasty-quickcheck
  hs-source-dirs:      test/src
  default-language:    Haskell2010

executable coqxtractor
  main-is:             coqxtractor.hs
  build-depends:       base,
                       bitfunctor,
                       bytestring,
                       base16-bytestring,
                       aeson,
                       containers,
                       text,
                       time,
                       cryptonite >= 0.9,
                       memory,
                       binary,
                       process,
                       parsec,
                       parsec-numbers,
                       MissingH,
                       directory,
                       split,
                       utf8-string
  hs-source-dirs:      test/src
  default-language:    Haskell2010
