name:                serun
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://bitfunctor.net,
                     https://github.com/BitFunctor/bitfunctor
bug-reports:         https://github.com/BitFunctor/bitfunctor/issues
-- license:
-- license-file:        LICENSE
author:              andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
maintainer:          andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
copyright:           (c) 2015 BitFunctor Project
category:            Finance, Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable se_run
  main-is:             se_run.hs
  build-depends:       base,
                       bytestring,
                       base16-bytestring,
                       aeson,
                       containers,
                       text,
                       time,
                       cryptonite >= 0.13,
                       memory,
                       binary,
                       process,
                       parsec,
                       parsec-numbers,
                       MissingH
  hs-source-dirs:      src
  default-language:    Haskell2010
